--- a/LoanManagementSystem/Views/Member/Details.cshtml
+++ b/LoanManagementSystem/Views/Member/Details.cshtml
@@ -18,11 +18,19 @@
             @Html.DisplayFor(model => model.Code)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
@@ -43,39 +51,39 @@
 
         <h4>Communication Address</h4>
         <dt>
-            @Html.DisplayNameFor(model => model.Address.Address1)
+            @Html.DisplayNameFor(model => model.UserAddress.Address1)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Address.Address1)
+            @Html.DisplayFor(model => model.UserAddress.Address1)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address.Address2)
+            @Html.DisplayNameFor(model => model.UserAddress.Address2)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Address.Address2)
+            @Html.DisplayFor(model => model.UserAddress.Address2)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Address.Place)
+            @Html.DisplayNameFor(model => model.UserAddress.Place)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Address.Place)
+            @Html.DisplayFor(model => model.UserAddress.Place)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address.Post)
+            @Html.DisplayNameFor(model => model.UserAddress.Post)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Address.Post)
+            @Html.DisplayFor(model => model.UserAddress.Post)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address.District)
+            @Html.DisplayNameFor(model => model.UserAddress.District)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Address.District)
+            @Html.DisplayFor(model => model.UserAddress.District)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.FatherName)
