--- a/LoanManagementSystem/Views/Member/Delete.cshtml
+++ b/LoanManagementSystem/Views/Member/Delete.cshtml
@@ -9,65 +9,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>sdtoUser</h4>
+
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Address.Address1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address.Address1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Contacts.ContactName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Contacts.ContactName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GuaranterAddress.Address1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GuaranterAddress.Address1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GuaranterContacts.ContactName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GuaranterContacts.ContactName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PermanentAddress.Address1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PermanentAddress.Address1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PermanentContacts.ContactName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PermanentContacts.ContactName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UserGroup.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserGroup.Name)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Code)
         </dt>
@@ -75,13 +19,20 @@
         <dd>
             @Html.DisplayFor(model => model.Code)
         </dd>
-
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
@@ -93,29 +44,49 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
+            @Html.DisplayNameFor(model => model.CreatedOn)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IsActive)
+            @Html.DisplayFor(model => model.CreatedOn)
+        </dd>
+
+        <h4>Communication Address</h4>
+        <dt>
+            @Html.DisplayNameFor(model => model.UserAddress.Address1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UserAddress.Address1)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Designation)
+            @Html.DisplayNameFor(model => model.UserAddress.Address2)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.UserAddress.Address2)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.UserAddress.Place)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Designation)
+            @Html.DisplayFor(model => model.UserAddress.Place)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserType)
+            @Html.DisplayNameFor(model => model.UserAddress.Post)
         </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.UserType)
+            @Html.DisplayFor(model => model.UserAddress.Post)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.UserAddress.District)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.UserAddress.District)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.FatherName)
         </dt>
@@ -125,12 +96,89 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.CreatedOn)
+            @Html.DisplayNameFor(model => model.Contacts.Telephone1)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CreatedOn)
+            @Html.DisplayFor(model => model.Contacts.Telephone1)
         </dd>
+
+        <h4>Permanent Address</h4>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PermanentAddress.Address1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PermanentAddress.Address1)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PermanentAddress.Address2)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PermanentAddress.Address2)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PermanentAddress.Place)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PermanentAddress.Place)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PermanentAddress.Post)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PermanentAddress.Post)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PermanentAddress.District)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PermanentAddress.District)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PermanentContacts.Telephone1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PermanentContacts.Telephone1)
+        </dd>
+
+
+        <h4>Guaranter Details</h4>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.GuaranterName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.GuaranterName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.GuaranterAddress.Address1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.GuaranterAddress.Address1)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.GuaranterContacts.Telephone1)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.GuaranterContacts.Telephone1)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Occupation)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Occupation)
+        </dd>
+
 
     </dl>
 
