--- a/LoanManagementSystem/Views/User/Details.cshtml
+++ b/LoanManagementSystem/Views/User/Details.cshtml
@@ -4,19 +4,12 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>User Details</h2>
 
-<div>
-    <h4>User</h4>
+<div> 
 	<hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserGroup.Code)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserGroup.Code)
-        </dd>
+      
 
         <dt>
             @Html.DisplayNameFor(model => model.Code)
@@ -27,11 +20,18 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
