--- a/LoanManagementSystem/Views/User/Delete.cshtml
+++ b/LoanManagementSystem/Views/User/Delete.cshtml
@@ -4,21 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserGroup.Code)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserGroup.Code)
-        </dd>
-
+       
         <dt>
             @Html.DisplayNameFor(model => model.Code)
         </dt>
@@ -28,11 +19,18 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
         </dd>
 
         <dt>
