--- a/LoanManagementSystem/Views/Executive/Details.cshtml
+++ b/LoanManagementSystem/Views/Executive/Details.cshtml
@@ -18,11 +18,18 @@
             @Html.DisplayFor(model => model.Code)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Designation)
