--- a/LoanManagementSystem/Views/Executive/Edit.cshtml
+++ b/LoanManagementSystem/Views/Executive/Edit.cshtml
@@ -26,12 +26,19 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FirstName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name)
-                @Html.ValidationMessageFor(model => model.Name)
+                @Html.EditorFor(model => model.FirstName)
+                @Html.ValidationMessageFor(model => model.FirstName)
             </div>
-        </div>  
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.LastName, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LastName)
+                @Html.ValidationMessageFor(model => model.LastName)
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Designation, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -61,6 +68,10 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.UserAddress.Address1, new { htmlAttributes = new { @class = "form-control" } })
 
+                @Html.HiddenFor(model => model.UserAddressId)
+                @Html.HiddenFor(model => model.UserAddress.AddressId)
+                @Html.HiddenFor(model => model.UserContactId)
+                @Html.HiddenFor(model => model.Contacts.ContactId)
             </div>
         </div>
 
