Redirect to create company if company is added while adding settings

--- a/LoanManagementSystem/Views/Company/Create.cshtml
+++ b/LoanManagementSystem/Views/Company/Create.cshtml
@@ -7,6 +7,7 @@
 
 <h2>Create New Company</h2>
 
+@Html.Label(Convert.ToString(TempData["ERR_PREMATURE_MESSAGE"]));
 @using (Html.BeginForm("Create", "Company", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
