--- a/LoanManagementSystem/Views/UserGroup/Create.cshtml
+++ b/LoanManagementSystem/Views/UserGroup/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LoanManagementSystem.Models.sdtoUserGroup
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create User Group";
 }
 
-<h2>Create User Group</h2>
+@*<h2>Create User Group</h2>*@
 
 
 @using (Html.BeginForm()) 
