--- a/LoanManagementSystem/Views/UserGroup/Index.cshtml
+++ b/LoanManagementSystem/Views/UserGroup/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@model IEnumerable<LoanManagementSystem.Models.sdtoUserGroup>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of User Groups";
 }
-
-<h2>List of User Groups</h2>
+     
 
 <p>
     @Html.ActionLink("Create New", "Create")
