--- a/LoanManagementSystem/Views/UserGroup/Delete.cshtml
+++ b/LoanManagementSystem/Views/UserGroup/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model LoanManagementSystem.Models.sdtoUserGroup
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete User Group";
 }
-
-<h2>Delete</h2>
+ 
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>UserGroup</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
