--- a/LoanManagementSystem/Views/UserGroup/Details.cshtml
+++ b/LoanManagementSystem/Views/UserGroup/Details.cshtml
@@ -1,13 +1,10 @@
 ﻿@model LoanManagementSystem.Models.sdtoUserGroup
 
 @{
-    ViewBag.Title = "Details";
-}
+    ViewBag.Title = "User Group Details";
+} 
 
-<h2>Details</h2>
-
-<div>
-    <h4>UserGroup</h4>
+<div> 
 	<hr />
     <dl class="dl-horizontal">
         <dt>
