--- a/LoanManagementSystem/Views/Company/Details.cshtml
+++ b/LoanManagementSystem/Views/Company/Details.cshtml
@@ -1,14 +1,12 @@
 ﻿@model LoanManagementSystem.Models.sdtoCompany
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Company Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+ 
 
-<h2>Details</h2>
-
-<div>
-    <h4>sdtoCompany</h4>
+<div> 
 	<hr />
     <dl class="dl-horizontal">
         <dt>
