--- a/LoanManagementSystem/Views/Company/Delete.cshtml
+++ b/LoanManagementSystem/Views/Company/Delete.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+@*<h2>Delete</h2>*@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>sdtoCompany</h4>
+    @*<h4>sdtoCompany</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
