--- a/LoanManagementSystem/Views/Executive/Edit.cshtml
+++ b/LoanManagementSystem/Views/Executive/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Executives";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit Executives</h2>
+@*<h2>Edit Executives</h2>*@
 
 @using (Html.BeginForm())
 {
