--- a/LoanManagementSystem/Views/Executive/Create.cshtml
+++ b/LoanManagementSystem/Views/Executive/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Executives";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create Executives</h2>
+@*<h2>Create Executives</h2>*@
 
 @using (Html.BeginForm()) 
 {
