--- a/LoanManagementSystem/Views/Executive/Delete.cshtml
+++ b/LoanManagementSystem/Views/Executive/Delete.cshtml
@@ -5,19 +5,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+@*<h2>Delete</h2>*@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>sdtoUser</h4>
+    @*<h4>sdtoUser</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Address.Address1)
+            @Html.DisplayNameFor(model => model.UserAddress.Address1)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Address.Address1)
+            @Html.DisplayFor(model => model.UserAddress.Address1)
         </dd>
 
         <dt>
