--- a/LoanManagementSystem/Views/Member/Delete.cshtml
+++ b/LoanManagementSystem/Views/Member/Delete.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Member";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete Member</h2>
+@*<h2>Delete Member</h2>*@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
