--- a/LoanManagementSystem/Views/Member/Details.cshtml
+++ b/LoanManagementSystem/Views/Member/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Member Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Member Details</h2>
+@*<h2>Member Details</h2>*@
 
 <div> 
 	<hr />
