--- a/LoanManagementSystem/Views/Member/Index.cshtml
+++ b/LoanManagementSystem/Views/Member/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<LoanManagementSystem.Models.sdtoUser>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of Members";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>List of Members</h2>
+@*<h2>List of Members</h2>*@
 
 <p>
     @Html.ActionLink("Create New", "Create")
