--- a/LoanManagementSystem/Views/Member/Edit.cshtml
+++ b/LoanManagementSystem/Views/Member/Edit.cshtml
@@ -1,11 +1,11 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Member";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit Member</h2>
+@*<h2>Edit Member</h2>*@
 
 @using (Html.BeginForm())
 {
