--- a/LoanManagementSystem/Views/User/Details.cshtml
+++ b/LoanManagementSystem/Views/User/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LoanManagementSystem.Models.sdtoUser
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "User Details";
 }
 
-<h2>User Details</h2>
+@*<h2>User Details</h2>*@
 
 <div> 
 	<hr />
