--- a/LoanManagementSystem/Views/User/Index.cshtml
+++ b/LoanManagementSystem/Views/User/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<LoanManagementSystem.Models.sdtoUser>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of Users";
 }
 
-<h2>List Users</h2>
+@*<h2>List Users</h2>*@
 
 <p>
     @Html.ActionLink("Create New", "Create")
