--- a/LoanManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LoanManagementSystem/Views/Shared/_Layout.cshtml
@@ -36,49 +36,49 @@
             <!-- Header Navbar -->
             <nav class="navbar navbar-static-top" role="navigation">
                 <!-- Sidebar toggle button-->
-                <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                @*<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                     <span class="sr-only">Toggle navigation</span>
-                </a>
+                </a>*@
                 <!-- Navbar Right Menu -->
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <!-- Messages: style can be found in dropdown.less-->
                         <li class="dropdown messages-menu">
                             <!-- Menu toggle button -->
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-envelope-o"></i>
-                                <span class="label label-success">4</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">You have 4 messages</li>
-                                <li>
-                                    <!-- inner menu: contains the messages -->
-                                    <ul class="menu">
-                                        <li>
-                                            <!-- start message -->
-                                            <a href="#">
-                                                <div class="pull-left">
-                                                    <!-- User Image -->
-                                                    <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                                </div>
-                                                <!-- Message title and timestamp -->
-                                                <h4>
-                                                    Support Team
-                                                    <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                                                </h4>
-                                                <!-- The message -->
-                                                <p>Why not buy a new awesome theme?</p>
-                                            </a>
-                                        </li><!-- end message -->
-                                    </ul><!-- /.menu -->
-                                </li>
-                                <li class="footer"><a href="#">See All Messages</a></li>
-                            </ul>
+                          @*  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+         <i class="fa fa-envelope-o"></i>
+         <span class="label label-success">4</span>
+     </a>
+    <ul class="dropdown-menu">
+         <li class="header">You have 4 messages</li>
+         <li>
+             <!-- inner menu: contains the messages -->
+             <ul class="menu">
+                 <li>
+                     <!-- start message -->
+                     <a href="#">
+                         <div class="pull-left">
+                             <!-- User Image -->
+                             <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                         </div>
+                         <!-- Message title and timestamp -->
+                         <h4>
+                             Support Team
+                             <small><i class="fa fa-clock-o"></i> 5 mins</small>
+                         </h4>
+                         <!-- The message -->
+                         <p>Why not buy a new awesome theme?</p>
+                     </a>
+                 </li><!-- end message -->
+             </ul><!-- /.menu -->
+         </li>
+         <li class="footer"><a href="#">See All Messages</a></li>
+     </ul>*@
                         </li><!-- /.messages-menu -->
                         <!-- Notifications Menu -->
                         <li class="dropdown notifications-menu">
                             <!-- Menu toggle button -->
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            @*<a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-bell-o"></i>
                                 <span class="label label-warning">10</span>
                             </a>
@@ -96,10 +96,10 @@
                                     </ul>
                                 </li>
                                 <li class="footer"><a href="#">View all</a></li>
-                            </ul>
+                            </ul>*@
                         </li>
                         <!-- Tasks Menu -->
-                        <li class="dropdown tasks-menu">
+                        @*<li class="dropdown tasks-menu">
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-flag-o"></i>
@@ -133,7 +133,7 @@
                                     <a href="#">View all tasks</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                         <!-- User Account Menu -->
                         <li class="dropdown user user-menu">
                             <!-- Menu Toggle Button -->
@@ -177,9 +177,9 @@
                             </ul>
                         </li>
                         <!-- Control Sidebar Toggle Button -->
-                        <li>
+                        @*<li>
                             <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </nav>
@@ -190,22 +190,22 @@
             <section class="sidebar">
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
-                    <div class="pull-left image">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                    </div>
+                   @* <div class="pull-left image">
+                         <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                     </div>
                     <div class="pull-left info">
-                        <p>Alexander Pierce</p>
-                        <!-- Status -->
-                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                    </div>
+                         <p>Alexander Pierce</p>
+                         <!-- Status -->
+                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                     </div>*@
                 </div>
                 <!-- search form (Optional) -->
                 <form action="#" method="get" class="sidebar-form">
                     <div class="input-group">
                         <input type="text" name="q" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
+                        @*<span class="input-group-btn">
                             <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i></button>
-                        </span>
+                        </span>*@
                     </div>
                 </form>
                 <!-- /.search form -->
