--- a/LoanManagementSystem/Views/Settings/Index.cshtml
+++ b/LoanManagementSystem/Views/Settings/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.CompanyId)
+            @Html.DisplayNameFor(model => model.Company.CompanyName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BankInterest)
@@ -36,35 +36,36 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BankInterest)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BankCharges)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedOn)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SettingsId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SettingsId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SettingsId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Company.CompanyName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BankInterest)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BankCharges)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedOn)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ModifiedBy)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ModifiedOn)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SettingsId }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SettingsId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SettingsId })
+            </td>
+        </tr>
+    }
 
 </table>
