--- a/LoanManagementSystem/Views/Settings/Create.cshtml
+++ b/LoanManagementSystem/Views/Settings/Create.cshtml
@@ -15,7 +15,7 @@
         <h4>sdtoSettings</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.CompanyId, new { htmlAttributes = new { @class = "form-control" } })
+        @*@Html.HiddenFor(model => model.CompanyId, new { htmlAttributes = new { @class = "form-control" } })*@
         @Html.HiddenFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
 
         <div class="form-group">
