--- a/LoanManagementSystem/Views/LoanRepayments/Create.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Create.cshtml
@@ -1,18 +1,15 @@
 ﻿@model Data.Models.Accounts.sdtoLoanRepayment
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add Loan Repayment";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Create</h2>
-
+ 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>sdtoLoanRepayment</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
