--- a/LoanManagementSystem/Views/LoanRepayments/Delete.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Delete.cshtml
@@ -1,15 +1,12 @@
 ﻿@model Data.Models.Accounts.sdtoLoanRepayment
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Loan Repayment";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Delete</h2>
+} 
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>sdtoLoanRepayment</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
