--- a/LoanManagementSystem/Views/LoanRepayments/Details.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Details.cshtml
@@ -1,14 +1,11 @@
 ﻿@model Data.Models.Accounts.sdtoLoanRepayment
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Loan Repayment Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Details</h2>
-
-<div>
-    <h4>sdtoLoanRepayment</h4>
+ 
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
