--- a/LoanManagementSystem/Views/LoanRepayments/Edit.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Edit.cshtml
@@ -1,18 +1,15 @@
 ﻿@model Data.Models.Accounts.sdtoLoanRepayment
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Loan Repayment";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Edit</h2>
-
+ 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>sdtoLoanRepayment</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.LoanRepaymentId)
