--- a/LoanManagementSystem/Views/LoanRepayments/Index.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Index.cshtml
@@ -1,20 +1,15 @@
 ﻿@model IEnumerable<Data.Models.Accounts.sdtoLoanRepayment>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Loan Repayment List";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Index</h2>
-
+} 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.LoanDetails.ChequeDetails)
-        </th>
+      
         <th>
             @Html.DisplayNameFor(model => model.RepaymentCode)
         </th>
@@ -30,50 +25,21 @@
         <th>
             @Html.DisplayNameFor(model => model.RepaymentAmount)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PendingPrincipalAmount)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.PaymentMode)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ChequeDetails)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notes)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeletedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeletedOn)
-        </th>
+       
+        
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.LoanDetails.ChequeDetails)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.RepaymentCode)
         </td>
@@ -89,42 +55,15 @@
         <td>
             @Html.DisplayFor(modelItem => item.RepaymentAmount)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PendingPrincipalAmount)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.Status)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PaymentMode)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ChequeDetails)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Notes)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletedOn)
-        </td>
+        
+        
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.LoanRepaymentId }) |
             @Html.ActionLink("Details", "Details", new { id=item.LoanRepaymentId }) |
