--- a/LoanManagementSystem/Views/AccountBooks/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Create.cshtml
@@ -1,18 +1,14 @@
 ﻿@model Data.Models.Accounts.sdtoAccountBook
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Account Books";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Create</h2>
-
+} 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>sdtoAccountBook</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
