--- a/LoanManagementSystem/Views/AccountHeads/Details.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Details.cshtml
@@ -1,14 +1,11 @@
 ﻿@model Data.Models.Accounts.sdtoAccountHead
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title =  "Account Head Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
+} 
 
-<h2>Details</h2>
-
-<div>
-    <h4>sdtoAccountHead</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
