--- a/LoanManagementSystem/Views/AccountHeads/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Create.cshtml
@@ -1,18 +1,15 @@
 ﻿@model Data.Models.Accounts.sdtoAccountHead
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Account Head";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Create</h2>
+} 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>sdtoAccountHead</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
