--- a/LoanManagementSystem/Views/AccountHeads/Delete.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Delete.cshtml
@@ -1,15 +1,11 @@
 ﻿@model Data.Models.Accounts.sdtoAccountHead
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Account Head";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Delete</h2>
-
+} 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>sdtoAccountHead</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
