--- a/LoanManagementSystem/Views/AccountHeads/Edit.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Edit.cshtml
@@ -1,18 +1,15 @@
 ﻿@model Data.Models.Accounts.sdtoAccountHead
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Account Head";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Edit</h2>
+} 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>sdtoAccountHead</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.AccountHeadId)
