--- a/LoanManagementSystem/Views/Loan/Index.cshtml
+++ b/LoanManagementSystem/Views/Loan/Index.cshtml
@@ -1,11 +1,9 @@
 ﻿@model IEnumerable<Data.Models.Accounts.sdtoLoanInfo>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List Loans";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Index</h2>
+} 
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -15,12 +13,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Member.Code)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RepaymentStartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RePaymentInterval)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.RequestedAmount)
         </th>
@@ -30,48 +23,16 @@
         <th>
             @Html.DisplayNameFor(model => model.LoanAmount)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalInstallments)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ChequeDetails)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InteresRate)
-        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.SanctionedDate)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SanctionedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notes)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedOn)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ModifiedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeletedBy)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeletedOn)
-        </th>
+        
+       
         <th></th>
     </tr>
 
@@ -80,12 +41,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Member.Code)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RepaymentStartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RePaymentInterval)
-        </td>
+         
         <td>
             @Html.DisplayFor(modelItem => item.RequestedAmount)
         </td>
@@ -95,48 +51,14 @@
         <td>
             @Html.DisplayFor(modelItem => item.LoanAmount)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalInstallments)
-        </td>
+        
         <td>
             @Html.DisplayFor(modelItem => item.Status)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ChequeDetails)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InteresRate)
-        </td>
+       
         <td>
             @Html.DisplayFor(modelItem => item.SanctionedDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SanctionedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Notes)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedOn)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ModifiedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletedBy)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletedOn)
-        </td>
+        </td> 
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.LoanId }) |
             @Html.ActionLink("Details", "Details", new { id=item.LoanId }) |
