--- a/LoanManagementSystem/Views/Loan/Delete.cshtml
+++ b/LoanManagementSystem/Views/Loan/Delete.cshtml
@@ -1,15 +1,12 @@
 ﻿@model Data.Models.Accounts.sdtoLoanInfo
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Loan";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Delete</h2>
-
+ 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>sdtoLoanInfo</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
