--- a/LoanManagementSystem/Views/ScheduleSettings/Details.cshtml
+++ b/LoanManagementSystem/Views/ScheduleSettings/Details.cshtml
@@ -1,12 +1,10 @@
 ﻿@model Data.Models.Accounts.Schedules.sdtoSchedule
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Schedule Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Details</h2>
-
+ 
 <div>
     <h4>sdtoSchedule</h4>
     <hr />
