--- a/LoanManagementSystem/Views/ScheduleSettings/Index.cshtml
+++ b/LoanManagementSystem/Views/ScheduleSettings/Index.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Data.Models.SysBase.Tree.Tree<Data.Models.Accounts.Schedules.sdtoSchedule>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Schedule Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
+     
 
 @*<script src="@Url.Content("~/Scripts/jstree.js")" type="text/javascript"></script>
     <script type="text/javascript">
