--- a/LoanManagementSystem/Views/ScheduleSettings/Delete.cshtml
+++ b/LoanManagementSystem/Views/ScheduleSettings/Delete.cshtml
@@ -1,15 +1,11 @@
 ﻿@model Data.Models.Accounts.Schedules.sdtoSchedule
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Schedule";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>Delete</h2>
-
+} 
 <h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>sdtoSchedule</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
