--- a/LoanManagementSystem/Views/Settings/Create.cshtml
+++ b/LoanManagementSystem/Views/Settings/Create.cshtml
@@ -1,18 +1,16 @@
 ﻿@model Data.Models.Accounts.sdtoSettings
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>sdtoSettings</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @*@Html.HiddenFor(model => model.CompanyId, new { htmlAttributes = new { @class = "form-control" } })*@
