--- a/LoanManagementSystem/Views/Settings/Delete.cshtml
+++ b/LoanManagementSystem/Views/Settings/Delete.cshtml
@@ -1,15 +1,14 @@
 ﻿@model Data.Models.Accounts.sdtoSettings
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>sdtoSettings</h4>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
