--- a/LoanManagementSystem/Views/Settings/Details.cshtml
+++ b/LoanManagementSystem/Views/Settings/Details.cshtml
@@ -1,14 +1,11 @@
 ﻿@model Data.Models.Accounts.sdtoSettings
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Setting Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
-}
+} 
 
-<h2>Details</h2>
-
-<div>
-    <h4>sdtoSettings</h4>
+<div> 
     <hr />
     <dl class="dl-horizontal">
         <dt>
