--- a/LoanManagementSystem/Views/Settings/Edit.cshtml
+++ b/LoanManagementSystem/Views/Settings/Edit.cshtml
@@ -1,18 +1,15 @@
 ﻿@model Data.Models.Accounts.sdtoSettings
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Edit</h2>
-
+ 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>sdtoSettings</h4>
+    <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.SettingsId)
