--- a/LoanManagementSystem/Views/Settings/Index.cshtml
+++ b/LoanManagementSystem/Views/Settings/Index.cshtml
@@ -1,12 +1,10 @@
 ﻿@model IEnumerable<Data.Models.Accounts.sdtoSettings>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Settings";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
+     
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
