--- a/LoanManagementSystem/Views/AccountBooks/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Create.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewBag.Title = "Create Account Books";
     Layout = "~/Views/Shared/_Layout.cshtml";
-} 
-@using (Html.BeginForm()) 
+}
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal"> 
+
+    <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -46,7 +46,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountHeadId, "AccountHeadId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountHeadId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
             </div>
         </div>
