--- a/LoanManagementSystem/Views/AccountBooks/Edit.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Edit.cshtml
@@ -3,15 +3,17 @@
 @{
     ViewBag.Title = "Edit Account Books";
     Layout = "~/Views/Shared/_Layout.cshtml";
-} 
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal"> 
+
+    <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.AccountBookId)
+        @Html.HiddenFor(model => model.CreatedBy)
+        @Html.HiddenFor(model => model.CreatedOn)
 
         <div class="form-group">
             @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label col-md-2" })
