--- a/LoanManagementSystem/Views/Member/Create.cshtml
+++ b/LoanManagementSystem/Views/Member/Create.cshtml
@@ -14,6 +14,7 @@
     <div class="form-horizontal"> 
         <hr />
         @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.CompanyId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Code, new { @class = "control-label col-md-2" })
@@ -37,16 +38,7 @@
                 @Html.EditorFor(model => model.LastName)
                 @Html.ValidationMessageFor(model => model.LastName)
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CreatedOn,"Date", new { @class = "control-label col-md-2" })
-            
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreatedOn)
-                @Html.ValidationMessageFor(model => model.CreatedOn)
-            </div>
-        </div>
+        </div>        
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description,"Remarks", new { @class = "control-label col-md-2" })
