--- a/LoanManagementSystem/Views/User/Create.cshtml
+++ b/LoanManagementSystem/Views/User/Create.cshtml
@@ -7,13 +7,14 @@
 @*<h2>Create User</h2>*@
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal"> 
+
+    <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true)
+        @Html.HiddenFor(model => model.CompanyId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Code, new { @class = "control-label col-md-2" })
@@ -49,16 +50,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserGroupId, "UserGroupId", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserGroupId", String.Empty)
+                @Html.DropDownListFor(model => model.UserGroupId, (SelectList)ViewBag.UserGroupList, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UserGroupId)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.IsActive, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IsActive)
-                @Html.ValidationMessageFor(model => model.IsActive)
             </div>
         </div>
 
